<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/labelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_120sdp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_34ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMobile"
            style="@style/CommonEditTextStyle"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_edit_text"
            android:digits="1234567890"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelLogin" />

        <Button
            android:id="@+id/btnVerify"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/verify"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtMobile" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>