<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.practice_task.login.LoginViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MainConstraintStyle"
    tools:context=".login.LoginActivity">

<TextView
    android:id="@+id/labelApiResponse"
    android:layout_width="wrap_content"
    android:text="@string/api_response"
    android:textColor="@color/purple_700"
     android:textSize="@dimen/_20ssp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="@dimen/_30sdp"
    android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/name"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/labelApiResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        tools:text="Pratik"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/labelApiResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/labelMobileNumber"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/mobile_number_"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtMobileNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        tools:text="123456789"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelCustomerID"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/customer_id"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txtCustomerID"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        tools:text="54321"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/labelEmailID"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/email_id"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelCustomerID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtEmailID"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        tools:text="pd@gmail.com"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/labelCustomerID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/btnSave"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/save_in_roomdb"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelEmailID"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>